# QuantisNet-Core

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  LICENSE  Makefile.am  README.md  Vagrantfile  autogen.sh  configure.ac  futoin.json  libquantisnetconsensus.pc.in
contrib/: README.md  gitian-build.py  gitian-build.sh  quantisnet-qt.pro  quantisnetd.bash-completion  tidy_datadir.sh
depends/: README.md
doc/: Doxyfile  README.md  benchmarking.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  gitian-building.md  guide-startmany.md  release-notes.md  release-process.md
qa/: README.md
quantisnet-docs/: devenv.md
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bip39.cpp  bip39.h  bip39_english.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  boost_workaround.hpp  cachemap.h  cachemultimap.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  (+156 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_quantisnet.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  rollingbloom.cpp  string_cast.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  common.h  echo.c  egihash.cpp  egihash.h  hmac_sha256.cpp  hmac_sha512.cpp  keccak-tiny.c  luffa.c  shavite.c
src/leveldb/db/: db_impl.cc  memtable.cc  repair.cc
src/leveldb/port/: port_win.cc
src/leveldb/util/: bloom.cc  env_win.cc  logging.cc
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  configuremasternodepage.cpp  configuremasternodepage.h  csvmodelwriter.cpp  csvmodelwriter.h  darksendconfig.cpp  darksendconfig.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  masternodelist.cpp  masternodelist.h  (+80 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  configuremasternodepage.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  masternodelist.ui  modaloverlay.ui  optionsdialog.ui  outputspage.ui  overviewpage.ui  privkeypage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: quantisnet_bg.ts  quantisnet_de.ts  quantisnet_en.ts  quantisnet_es.ts  quantisnet_fi.ts  quantisnet_fr.ts  quantisnet_it.ts  quantisnet_ja.ts  quantisnet_nl.ts  quantisnet_pl.ts  quantisnet_pt.ts  quantisnet_pt_BR.ts  quantisnet_ru.ts  quantisnet_sk.ts  quantisnet_sv.ts  quantisnet_vi.ts  quantisnet_zh_CN.ts  quantisnet_zh_TW.ts
src/qt/res/: quantisnet-qt-res.rc
src/qt/res/css/: crownium.css  drkblue.css  light-hires.css  light.css  trad.css
src/qt/res/icons/: quantisnet.icns
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  trafficgraphdatatests.cpp  trafficgraphdatatests.h  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.cpp  client.h  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  rpcegihash.cpp  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  quantisnetconsensus.cpp  quantisnetconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pos_tests.cpp  pow_tests.cpp  prevector_tests.cpp  (+30 more)
src/test/data/: base58_keys_valid.json  bip39_vectors.json  bitcoin-util-test.json  proposals_valid.json
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
test/: lint-format-strings.py  lint-format-strings.sh
(+185 files in other folders)
